# ocl-convolution

./: .clippy.toml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  crates.js  deny.toml  help.html  index.html  install-pocl.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
benches/: basics.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/ocl_convolution/: trait.ConvElement.js  trait.WithParams.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
ocl_convolution/: all.html  enum.Layout.html  index.html  sidebar-items.js  struct.Convolution.html  struct.ConvolutionBuilder.html  struct.FeatureMap.html  struct.FeatureMapShape.html  struct.FiltersConvolution.html  struct.I8Params.html  struct.Params.html  struct.PinnedConvolution.html  trait.ConvElement.html  trait.WithParams.html
ocl_convolution/base/: struct.ConvolutionBuilder.html
ocl_convolution/buffers/: enum.Layout.html  struct.FeatureMap.html  struct.FeatureMapShape.html
ocl_convolution/params/: struct.I8Params.html  struct.Params.html  trait.WithParams.html
search.index/: 1647fa503f62.js  302a2918c0b3.js  533d01272216.js  59fb745fbbab.js  672dd4a40f55.js  6a76be82d847.js  6e37d455aa4e.js  root.js
search.index/crateNames/: 6e8d873a80bf.js
search.index/desc/: 68a227c50c3a.js
search.index/entry/: 3b2edeb4395a.js
search.index/function/: 3ac80932a6a2.js
search.index/generic_inverted_index/: 74a7c1e9c6cc.js
search.index/name/: 234ddb96fddf.js
search.index/normalizedName/: 980fa7ddc30f.js
search.index/path/: 63844bd13f25.js
search.index/type/: fdfca7e28dfd.js
src/: base.rs  buffers.rs  conv.cl  i8_conv.cl  lib.rs  params.rs
src/ocl_convolution/: base.rs.html  buffers.rs.html  lib.rs.html  params.rs.html
tests/: basic.rs  cpu_comparison.rs  version_match.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/ocl_convolution/: trait.ConvElement.js
(+11 files in other folders)
