[package]
name = "ocl-convolution"
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
keywords = ["convolution", "neural-network", "deep-learning", "OpenCL"]
readme = "README.md"
categories = ["science"]
description = "OpenCL-accelerated 2D convolutions"
repository = "https://github.com/slowli/ocl-convolution"
exclude = [
  "/misc/**",
  ".editorconfig",
  ".github",
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Public dependencies (present in the public API).
ndarray = "0.15.1"
ocl = "0.19.5"

[dev-dependencies]
criterion = "0.5.1"
doc-comment = "0.3.3"
rand = "0.8.1"
rand_xorshift = "0.3.0"
version-sync = "0.9.1"

[[bench]]
name = "basics"
harness = false
path = "benches/basics.rs"
